Changed for prometheus. (#230)
Make prometheus the configured datasource for grafana.

Removes elasticsearch as the metric store.
Automatically provision Micrometer JVM dashboard.

--- a/archivist/src/main/resources/application.properties
+++ b/archivist/src/main/resources/application.properties
@@ -246,13 +246,16 @@ spring.http.multipart.enabled=false
 ## Management
 
 ### Enable the metrics endpoint.  Super admin is required to view.
-management.endpoints.web.exposure.include=metrics,info,health
+management.endpoints.web.exposure.include=metrics,info,health,prometheus
 
 ### Disable ES health checks.
 management.health.elasticsearch.enabled=false
 
-### Send metrics into elasticsearch (docker-compose link)
-management.metrics.export.elastic.host=http://es:9200
+### Enable prometheus endpoints
+management.metrics.export.prometheus.enabled=true
+
+### Add an application tag for micrometer metrics
+management.metrics.tags.application=archivist
 
 ## Database Migration Settings
 
