--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -125,8 +125,8 @@ services:
       - 5000:5000
     volumes:
       - "./localdev/shared:/shared"
+      - "./localdev/zorroa:/zorroa"
       - "../zorroa-test-data:/zorroa-test-data"
-
   curator:
      build: ../zorroa-js-curator
      user: node
