Allows application.properties to override the default ES index name.
This allows us to remove the test-es instance from docker-compose.yml, but could also be useful on-prem.

--- a/archivist/src/main/resources/application.properties
+++ b/archivist/src/main/resources/application.properties
@@ -200,6 +200,9 @@ archivist.index.default-url = http://localhost:9200
 ### Set to True if Archivist should attempt to create the default index at startup
 archivist.index.auto-create-index = true
 
+### Specify a default index name or "auto" for automatic naming based on mapping file.
+archivist.index.index-name = auto
+
 ### The default number of ES shards
 archivist.index.shards = 5
 
