--- a/archivist/src/test/resources/test.properties
+++ b/archivist/src/test/resources/test.properties
@@ -4,6 +4,8 @@
 #
 archivist.index.auto-create-index = false
 
+archivist.index.index-name = unittest
+
 #
 # Set the shared data path to the plugin installation spot.
 #
