--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -83,8 +83,8 @@ services:
       interval: 60s
       timeout: 50s
       retries: 5
-    environment:
-        LS_JAVA_OPTS: "-Xms256m -Xmx512m"
+    volumes:
+       - "./localdev/monitoring/logstash.options:/usr/share/logstash/config/jvm.options"
 
   kibana:
     image: docker.elastic.co/kibana/kibana-oss:6.2.4
