Add API metrics and a dashboard. (#237)
Add API metrics and a Grafana dashboard.
Move monitoring configs to localdev.

--- a/archivist/src/main/resources/application.properties
+++ b/archivist/src/main/resources/application.properties
@@ -260,6 +260,10 @@ management.metrics.export.prometheus.enabled=true
 ### Add an application tag for micrometer metrics
 management.metrics.tags.application=archivist
 
+### Turn off rest request metrics unless specifically annotated
+management.metrics.web.server.auto-time-requests=false
+management.metrics.distribution.percentiles-histogram.http.server.requests=true
+
 ## Database Migration Settings
 
 ### Check that a migration script location exists.
