Feature/evi 1494 secure monitor endpoints (#238)
* Secure monitoring endpoints and add a monitoring user.
* Use zorroa:monitor authority to secure endpoint.
EVI-1494
* Add a dashboard for other misc metrics.

--- a/archivist/src/main/resources/application.properties
+++ b/archivist/src/main/resources/application.properties
@@ -257,11 +257,16 @@ management.health.elasticsearch.enabled=false
 ### Enable prometheus endpoints
 management.metrics.export.prometheus.enabled=true
 
+### Path where monitor user key is written
+archivist.monitor.key.path=${archivist.path.home}/monitoring/monitor.auth.key
+
 ### Add an application tag for micrometer metrics
 management.metrics.tags.application=archivist
 
 ### Turn off rest request metrics unless specifically annotated
 management.metrics.web.server.auto-time-requests=false
+
+### Support percentile histogram generation
 management.metrics.distribution.percentiles-histogram.http.server.requests=true
 
 ## Database Migration Settings
