--- a/archivist/src/test/resources/test.properties
+++ b/archivist/src/test/resources/test.properties
@@ -11,6 +11,9 @@ archivist.index.index-name = unittest
 #
 archivist.path.home=unittest
 
+
+archivist.monitor.key.path=${archivist.path.home}/monitoring/monitor.auth.key
+
 spring.flyway.schemas=unittest40
 spring.datasource.url = jdbc:postgresql://localhost:5432/zorroa?currentSchema=unittest40
 spring.datasource.username=zorroa
