--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,11 +22,15 @@ services:
 
   prometheus:
     image: "prom/prometheus"
+    depends_on:
+      - "archivist"
     ports:
         - "9090:9090"
     secrets:
       - source: prometheus.yml
         target: /etc/prometheus/prometheus.yml
+      - source: monitor.auth.key
+        target: /etc/prometheus/monitor.auth.key
 
   # Grafana server connected to elasticsearch instance
   grafana:
@@ -145,3 +149,5 @@ secrets:
     file: ./localdev/monitoring/filebeat.yml
   prometheus.yml:
     file: ./localdev/monitoring/prometheus.yml
+  monitor.auth.key:
+    file: ./localdev/monitoring/monitor.auth.key
