--- a/localdev/monitoring/prometheus.yml
+++ b/localdev/monitoring/prometheus.yml
@@ -19,8 +19,9 @@ scrape_configs:
     static_configs:
     - targets: ['127.0.0.1:9090']
 
-  - job_name: 'spring-actuator'
+  - job_name: 'Archivist'
     metrics_path: '/actuator/prometheus'
     scrape_interval: 30s
     static_configs:
     - targets: ['archivist:8080']
+    bearer_token_file: /etc/prometheus/monitor.auth.key
