Fixes logstash/filebeat to only log events.

--- a/localdev/monitoring/logstash.conf
+++ b/localdev/monitoring/logstash.conf
@@ -5,10 +5,26 @@ input {
 }
 
 filter {
- kv { }
+
+  dissect {
+    mapping => {
+      "message" => "%{timestamp} %{+timestamp} %{level} %{pid} %{}[%{thread}] %{class}:%{logmessage}"
+    }
+  }
+
+  mutate {
+    strip => [ "logmessage", "class" ]
+    remove_field => [ "message" ]
+  }
+
+  kv {
+    source => "logmessage"
+  }
+
 }
 
 output {
+
   elasticsearch {
     hosts => ["http://es:9200"]
     index => "%{[@metadata][beat]}-%{[@metadata][version]}-%{+YYYY.MM}"
