More logstash updates and optimizations.

--- a/localdev/monitoring/filebeat.yml
+++ b/localdev/monitoring/filebeat.yml
@@ -21,7 +21,7 @@ processors:
     when:
       not:
         contains:
-          message: "Z-EVENT"
+          message: "ZEVENT"
 
 
 output.logstash:
