--- a/localdev/monitoring/logstash.conf
+++ b/localdev/monitoring/logstash.conf
@@ -13,12 +13,13 @@ filter {
   }
 
   mutate {
-    strip => [ "logmessage", "class" ]
-    remove_field => [ "message" ]
+    replace => { "message" => "%{logmessage}" }
+    remove_field => [ "logmessage" ]
+    strip => [ "message", "class", "thread" ]
   }
 
   kv {
-    source => "logmessage"
+    source => "message"
   }
 
 }
