Fixes to ES health check.
- The default ES server is now part of health check.
- Bad health checks get a 400

--- a/archivist/src/main/resources/application.properties
+++ b/archivist/src/main/resources/application.properties
@@ -251,6 +251,9 @@ spring.http.multipart.enabled=false
 ### Enable the metrics endpoint.  Super admin is required to view.
 management.endpoints.web.exposure.include=metrics,info,health,prometheus
 
+### Make a bad health status a 400
+management.health.status.http-mapping.DOWN=400
+
 ### Disable ES health checks.
 management.health.elasticsearch.enabled=false
 
