EVI-1648 Adds response compression server settings to enable by default.

--- a/archivist/src/main/resources/application.properties
+++ b/archivist/src/main/resources/application.properties
@@ -240,6 +240,17 @@ server.undertow.direct-buffers=true
 ### Disable the whitelabel error page.
 server.error.whitelabel.enabled = false
 
+## Response Compression Settings
+
+### Enable response compression
+server.compression.enabled=true
+
+### The comma-separated list of mime types that should be compressed
+server.compression.mime-types=application/json
+
+### Compress the response only if the response size is at least 1KB
+server.compression.min-response-size=1024
+
 ## File Upload Settings
 
 ### Disable multi-part processing as we're handling this manually.
