Added http basic auth for monitoring.
Username: monitor
Password: random by default.

To hard code a password in an external config, set the management.endpoints.password option in application properties.

--- a/archivist/src/main/resources/application.properties
+++ b/archivist/src/main/resources/application.properties
@@ -259,6 +259,9 @@ spring.http.multipart.enabled=false
 
 ## Management
 
+### An auto-generated monitoring password
+management.endpoints.password = ${random.value}
+
 ### Enable the metrics endpoint.  Super admin is required to view.
 management.endpoints.web.exposure.include=metrics,info,health,prometheus
 
@@ -270,9 +273,6 @@ management.health.elasticsearch.enabled=false
 
 ### Enable prometheus endpoints
 management.metrics.export.prometheus.enabled=true
-
-### Path where monitor user key is written
-archivist.monitor.key.path=${archivist.path.home}/monitoring/monitor.auth.key
 
 ### Add an application tag for micrometer metrics
 management.metrics.tags.application=archivist
