--- a/localdev/zorroa-archivist-config/application.properties
+++ b/localdev/zorroa-archivist-config/application.properties
@@ -11,3 +11,5 @@ archivist.index.default-url = http://es:9200
 archivist.storage.type = local
 archivist.pubsub.type = local
 
+management.endpoints.password = monitor
+
