--- a/localdev/monitoring/prometheus.yml
+++ b/localdev/monitoring/prometheus.yml
@@ -12,16 +12,11 @@ rule_files:
 # A scrape configuration containing exactly one endpoint to scrape:
 # Here it's Prometheus itself.
 scrape_configs:
-  # The job name is added as a label `job=<job_name>` to any timeseries scraped from this config.
-  - job_name: 'prometheus'
-    # metrics_path defaults to '/metrics'
-    # scheme defaults to 'http'.
-    static_configs:
-    - targets: ['127.0.0.1:9090']
-
   - job_name: 'Archivist'
     metrics_path: '/actuator/prometheus'
     scrape_interval: 30s
     static_configs:
     - targets: ['archivist:8080']
-    bearer_token_file: /etc/prometheus/monitor.auth.key
+    basic_auth:
+        username: monitor
+        password: monitor
