Fixes EVI-1555. Adds auto retries to tasks.

--- a/archivist/src/main/resources/application.properties
+++ b/archivist/src/main/resources/application.properties
@@ -16,7 +16,7 @@ archivist.organization.multiTenant = false
 ### Email domain
 archivist.organization.domain = zorroa.com
 
-## Priamary DB configuration.
+## Primary DB configuration.
 
 ### The SQL DB schema name.`
 spring.flyway.schemas=zorroa
@@ -105,6 +105,11 @@ archivist.security.saml.permissions.map =
 
 ### The IP ranges that are pre-authed as cluster nodes.
 archivist.security.analyst.ipRanges = .*
+
+## Dispatcher Settings
+
+### Number of times tasks are retried before being marked as failed.
+archivist.dispatcher.autoRetryLimit = 3
 
 ## Search Settings
 
