EVI-2872 - don't allow customers to make zorroa:: permissions, as they might conflict with future permission names.  Blocks them from creating stuff like superadmin and monitor.

--- a/archivist/src/test/resources/test.properties
+++ b/archivist/src/test/resources/test.properties
@@ -21,7 +21,7 @@ spring.datasource.password=zorroa
 archivist.requests.managerEmail=${USER}@zorroa.com
 archivist.debug-mode.enabled = true
 
-archivist.security.saml.permissions.map = marketing=zorroa::librarian,sales=zorroa::admin
+archivist.security.saml.permissions.map = marketing=zorroa::librarian,sales=zorroa::administrator
 
 #
 # Run the the web server and event server on different port.
