Updated entire app to use new IndexRoute system.

--- a/archivist/src/test/resources/test.properties
+++ b/archivist/src/test/resources/test.properties
@@ -6,6 +6,7 @@ unittest=true
 #
 archivist.index.auto-create-index = false
 
+archivist.index.default-url = http://localhost:9200
 archivist.index.index-name = unittest
 
 #
