--- a/archivist/src/main/resources/application.properties
+++ b/archivist/src/main/resources/application.properties
@@ -196,20 +196,14 @@ archivist.maintenance.archive-jobs-after-days = 30
 
 ## ElasticSearch Options
 
-### The default ES cluster URL
-archivist.index.default-url = http://localhost:9200
-
 ### Set to True if Archivist should attempt to create the default index at startup
 archivist.index.auto-create-index = true
 
-### Specify a default index name or "auto" for automatic naming based on mapping file.
-archivist.index.index-name = auto
+### The default ES cluster URL
+archivist.index.default-url = http://es:9200
 
-### The default number of ES shards
-archivist.index.shards = 5
-
-### The default number of ES replica shards
-archivist.index.replicas = 2
+### The default ES cluster URL
+archivist.index.default-mapping = V12__assets.json
 
 # Spring Settings
 
