Sets logging level to WARN in ci tests.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -70,6 +70,7 @@ unit_tests:
     POSTGRES_DB: zorroa
     PGDATA: /var/lib/postgresql/data/pgdata
     SPRING_DATASOURCE_URL: "jdbc:postgresql://postgres:5432/zorroa?currentSchema=unittest40"
+    LOGGING_LEVEL_COM_ZORROA: WARN
   script:
     - mvn test -q
 
