EVI-1812: set default values in archivist to populate default template settings in curator

--- a/archivist/src/main/resources/application.properties
+++ b/archivist/src/main/resources/application.properties
@@ -331,6 +331,15 @@ archivist.debug-mode.enabled = false
 ### The default drag template for exported metadata.
 curator.thumbnails.drag-template = %{source.path}
 
+### Default "static" field to display in lightbar and thumbnail templates
+curator.fields.default-static = source.type
+
+### Default lightbar label template
+curator.lightbar.label-template = %{source.filename} %{media.width}x%{media.height} %{source.date}
+
+### Default thumbnail badge template
+curator.thumbnail.badge-template = %{source.filename} %{media.width}x%{media.height}
+
 ### The minimum zoom for the lightbox
 curator.lightbox.zoom-min =
 
