--- a/saml/pom.xml
+++ b/saml/pom.xml
@@ -66,6 +66,11 @@
                 <groupId>org.jetbrains.kotlin</groupId>
                 <artifactId>kotlin-maven-plugin</artifactId>
                 <version>${kotlin.version}</version>
+                <configuration>
+                    <compilerPlugins>
+                        <plugin>spring</plugin>
+                    </compilerPlugins>
+                </configuration>
                 <executions>
                     <execution>
                         <id>compile</id>
@@ -82,6 +87,13 @@
                         </goals>
                     </execution>
                 </executions>
+                <dependencies>
+                    <dependency>
+                        <groupId>org.jetbrains.kotlin</groupId>
+                        <artifactId>kotlin-maven-allopen</artifactId>
+                        <version>${kotlin.version}</version>
+                    </dependency>
+                </dependencies>
             </plugin>
 
             <plugin>
@@ -99,9 +111,9 @@
                             <exclude>org.slf4j:*</exclude>
                             <exclude>commons-logging:*</exclude>
                             <exclude>ch.qos.logback:*</exclude>
+                            <exclude>org.jetbrains.kotlin:*</exclude>
                             <exclude>org.springframework:*</exclude>
                             <exclude>org.springframework.security:*</exclude>
-                            <exclude>org.jetbrains.kotlin:*</exclude>
                         </excludes>
                     </artifactSet>
                     <finalName>saml</finalName>
