Removed uneeded SAML options.

--- a/archivist/src/main/resources/application.properties
+++ b/archivist/src/main/resources/application.properties
@@ -69,19 +69,13 @@ archivist.security.ldap.filter=(cn={0})
 ## SAML Security configuration.
 
 ### The SAML base return URL
-archivist.security.saml.landingPage = /landing
+archivist.security.saml.landingPage = https://localhost/signin
 
 ### The SAML base URL, all endpoints derive from this.
 archivist.security.saml.baseUrl = http://localhost:8066
 
-### Set to true if the base URL is a proxy server that forwards requests to archivist.
-archivist.security.saml.baseUrlIsProxy = false
-
 ### Enable Logout button for SAML users
 archivist.security.saml.logout = true
-
-### Enable SAML discovery
-archivist.security.saml.discovery = true
 
 ### SAML keystore path
 archivist.security.saml.keystore.path = /config/saml/keystore.jks
