Added exmaple SAML props to local dev config.

--- a/localdev/zorroa-archivist-config/application.properties
+++ b/localdev/zorroa-archivist-config/application.properties
@@ -11,3 +11,16 @@ archivist.pubsub.type = local
 
 management.endpoints.password = monitor
 
+## SAML Options
+#archivist.security.saml.landingPage = https://localhost/signin
+#archivist.security.saml.baseUrl = https://localhost
+#archivist.security.saml.logout = true
+#archivist.security.saml.keystore.path = /config/saml/keystore.jks
+#archivist.security.saml.keystore.password = zorroa
+#archivist.security.saml.keystore.alias = zorroa
+#archivist.security.saml.keystore.keyPassword = zorroa
+
+## Extra debug logging
+#logging.level.org.springframework.security.saml=DEBUG
+#logging.level.org.opensaml=DEBUG
+#logging.level.PROTOCOL_MESSAGE=DEBUG
