Copy the saml extension to the archivist docker container and provide and environment variable to activate extensions.

--- a/saml/pom.xml
+++ b/saml/pom.xml
@@ -127,6 +127,24 @@
                     </execution>
                 </executions>
             </plugin>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>exec-maven-plugin</artifactId>
+                <version>1.4.0</version>
+                <executions>
+                    <execution>
+                        <id>Install into elasticsearch dir</id>
+                        <phase>install</phase>
+                        <goals>
+                            <goal>exec</goal>
+                        </goals>
+                        <configuration>
+                            <executable>cp</executable>
+                            <commandlineArgs>target/saml.jar "${project.parent.basedir}/archivist/ext"</commandlineArgs>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
         </plugins>
 
     </build>
