Have archivist utilize analyst hostnames instead of IP addresses, which is necessary if the analysts are coming through some kind of proxy.

--- a/archivist/src/main/resources/application.properties
+++ b/archivist/src/main/resources/application.properties
@@ -100,6 +100,10 @@ archivist.security.saml.permissions.map =
 ### The IP ranges that are pre-authed as cluster nodes.
 archivist.security.analyst.ipRanges = .*
 
+### Set to true if the archivist should contact analysts via their hostname, if any.
+### False Archivist should prefer ip addresses.
+archivist.security.analyst.prefer-hostnames= true
+
 ## Dispatcher Settings
 
 ### Number of times tasks are retried before being marked as failed.
