Improved code for marking analyst down, and removing inactive analysts.
- Added archivist.maintenance.analyst-down-inactivity-time property
- added archivist.maintenance.analyst-remove-inactivity-time property
- Moved logging down to DAO level.
- Added tests for MaintenanceServiceImpl.handleUnresponsiveAnalysts

--- a/archivist/src/main/resources/application.properties
+++ b/archivist/src/main/resources/application.properties
@@ -188,6 +188,12 @@ archivist.maintenance.sharedLinks.expireDays = 7
 ### Archive jobs with no activity after N days
 archivist.maintenance.archive-jobs-after-days = 30
 
+### Archive jobs with no activity after N days
+archivist.maintenance.analyst-down-inactivity-time = 3m
+
+### Archive jobs with no activity after N days
+archivist.maintenance.analyst-remove-inactivity-time = 30m
+
 ## ElasticSearch Options
 
 ### The default ES cluster URL
