Added concept of orphan task.
An orphan task is a task that hasn't seen a ping in a configurable amount of time.
The task is automatically retried.

--- a/archivist/src/main/resources/application.properties
+++ b/archivist/src/main/resources/application.properties
@@ -194,6 +194,9 @@ archivist.maintenance.analyst-down-inactivity-time = 3m
 ### Archive jobs with no activity after N days
 archivist.maintenance.analyst-remove-inactivity-time = 30m
 
+### Orphan tasks after no ping activity for the given time.
+archivist.maintenance.task-orphan-time = 3m
+
 ## ElasticSearch Options
 
 ### The default ES cluster URL
