Fixes property comments.

--- a/archivist/src/main/resources/application.properties
+++ b/archivist/src/main/resources/application.properties
@@ -188,10 +188,10 @@ archivist.maintenance.sharedLinks.expireDays = 7
 ### Archive jobs with no activity after N days
 archivist.maintenance.archive-jobs-after-days = 30
 
-### Archive jobs with no activity after N days
+### Amount of inactivity time before marking an analyst as down.
 archivist.maintenance.analyst-down-inactivity-time = 3m
 
-### Archive jobs with no activity after N days
+### Amount of inactivity time before removing an analyst.
 archivist.maintenance.analyst-remove-inactivity-time = 30m
 
 ### Orphan tasks after no ping activity for the given time.
