Added option to disable/enabled the routing key setting for the defualt route in application.properties. This is currently necessary for single tenent installs.

--- a/archivist/src/main/resources/application.properties
+++ b/archivist/src/main/resources/application.properties
@@ -203,8 +203,14 @@ archivist.maintenance.task-orphan-time = 3m
 
 ## ElasticSearch Options
 
-### The default ES cluster URL
+### Sets the default ES cluster URL.  The default route URL will be updated to this value every time
+### the server is restarted. The default route has an ID of '00000000-0000-0000-0000-000000000000.
 archivist.index.default-url = http://es:9200
+
+### The default index route should use routing keys.  Turn this off for single tenant. The default
+### route rkey setting will be updated to this value every time the server is restarted.
+### The default route has an ID of '00000000-0000-0000-0000-000000000000.
+archivist.index.default-use-routing-key = true
 
 # Spring Settings
 
